--- a/SCSS/_shopMobile.scss
+++ b/SCSS/_shopMobile.scss
@@ -14,7 +14,7 @@
             display: flex;
         }
     }
-    .contenedor_carrito{
+    .carritoWebshop{
         display: flex;
         justify-content: flex-end;
         align-items: center;
