--- a/SCSS/_contacMobile.scss
+++ b/SCSS/_contacMobile.scss
@@ -1,6 +1,6 @@
 @import "variables";
 /*pagina hecha con GRID*/
-.contenedor__contacto{
+.contenedorContacto{
     grid-template-columns: 100%;
     grid-template-rows: auto 30% 30% 40%;
     grid-template-areas: 
@@ -8,7 +8,7 @@
     "content"
     "consulta"
     "footer";
-    .contenido__contacto{
+    .contactoUbicacion{
         margin:0px;
         padding: 0px;
         align-items: center;
@@ -19,10 +19,10 @@
             height: 85%;
         }
     }
-    .contactanos--consultas{
+    .contactoConsultas{
         align-items: center;
         padding-top: 10px;
-        .form--consultas{
+        .consultasForm{
             align-items: stretch;
             .dataContactanos{
                 font-size: medium;
@@ -30,9 +30,7 @@
                 height: auto;
                 margin:5px 2%;
             }
-            .textoContactanos{
-                font-size: medium;
-                width: auto;
+            .textoContactanos{  /*font y width iguales que datacontactanos*/
                 height: auto;
                 margin:0px 2%;
             }
@@ -46,7 +44,7 @@
             }
         }
     }
-    .encabezadoContacto{
+    .encabezadosContacto{
         margin:auto;
         font-size: x-large;
     }
