--- a/SCSS/_webshop.scss
+++ b/SCSS/_webshop.scss
@@ -13,7 +13,7 @@
             display:none;
         }
     }
-    .contenedor_carrito{
+    .carritoWebshop{
         display: flex;
         justify-content: flex-end;
         align-items: center;
