optimo para entrega final

--- a/SCSS/_generales.scss
+++ b/SCSS/_generales.scss
@@ -3,7 +3,7 @@
 body{
     background-color:$cFondoPags;
     margin:0px;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Josefin Sans', sans-serif, "Dancing Script";
     min-height: 100vh;
 }
 .container-fluid{
