--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -3,6 +3,7 @@ $cEncabezados:rgb(6, 82, 6);
 $cHeader:rgba(129, 22, 22, 0.575);
 $cHeaderMob:rgb(129, 22, 22);
 $cFooter:rgba(15, 82, 44, 0.719);
+$cLogo:rgb(11, 58, 31);
 $cEnlaces:lightyellow;
 
 $estilosTexto:(
