--- a/CSS/elstylo.css
+++ b/CSS/elstylo.css
@@ -1,7 +1,7 @@
 body {
   background-color: tan;
   margin: 0px;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Josefin Sans', sans-serif, "Dancing Script";
   min-height: 100vh; }
 
 .container-fluid {
@@ -160,18 +160,14 @@ body {
 .mainHome {
   min-height: calc(100vh - 90px - 140px); }
   .mainHome .estilosLogo {
-    position: absolute;
-    z-index: 2;
-    overflow-x: hidden;
-    top: 33%;
-    bottom: auto;
-    right: 0px;
-    left: 20%;
-    width: 60%;
-    height: 14%; }
-    .mainHome .estilosLogo img {
-      width: 100%;
-      height: 100%; }
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 180px; }
+    .mainHome .estilosLogo h1 {
+      font-family: "Dancing Script";
+      font-size: 150px;
+      color: #0b3a1f; }
 
 .contenidoNosotros {
   min-height: calc(100vh - 90px - 141px);
@@ -341,6 +337,10 @@ body {
     .footer .encabezadoNewsletter, .contenedorContacto .contenedorFooter .encabezadoNewsletter, .contenedorContacto .contenedorFooter .contenedorFooter__newsletter .newsletter__h3 .h3--encabezado {
       font-size: 20px;
       overflow: hidden; }
+  .mainHome .estilosLogo {
+    top: 140px; }
+    .mainHome .estilosLogo h1 {
+      font-size: 110px; }
   .contenidoNosotros .parrafosNosotros {
     font-size: large; }
   .contenidoGaleria {
@@ -452,10 +452,11 @@ body {
   .mainHome {
     min-height: calc(100vh - 90px - 340px); }
     .mainHome .estilosLogo {
-      right: 0px;
-      left: 0px;
-      width: 100%;
-      top: 25%; }
+      align-items: center;
+      top: 0;
+      position: relative; }
+      .mainHome .estilosLogo h1 {
+        font-size: 53px; }
   .contenidoNosotros {
     display: flex;
     flex-direction: column;
